--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,9 @@
     
     <title>{% block title %}The Experience Project{% endblock %}</title>
     <body>
-        {% block header %} THE EXPERIENCE PROJECT {% endblock %}
-        {% block content %}This is the body for now{% endblock %}
+        
+        <h1>{% block header %} THE EXPERIENCE PROJECT {% endblock %}</h1>
+        <div id=content>{% block content %}This is the body for now{% endblock %}</div>
     
     </body>
     
