added category and pub_date fields to Experience model. Updated base.html and index.html templates. Need to review tomorrow with Joseph to make sure I've done both database update and template update correctly.

--- a/experiences/templates/experiences/experience_profile.html
+++ b/experiences/templates/experiences/experience_profile.html
@@ -7,7 +7,8 @@
 {% block content %}
     
     
-    <!--<img src="{{ experience.image.url }}" />--><!-- check documentation -->
+    <!--<img src="{{ experience.title.url }}" />--><!-- check documentation 
+    {{ object.mug_shot.url }}-->
     
     <p>{{ experience.description }}</p>
     
