--- a/experiences/templates/experiences/index.html
+++ b/experiences/templates/experiences/index.html
@@ -19,28 +19,46 @@
                     {% for category in active_categories %}  <!-- I THINK I MIGHT NEED TO CREATE A CATEGORY CLASS, then the active
                                                                 categories list should have objects of that class only if they're active-->
                     <li>
-                        <a title="{{ active_categories[category] }}" href="{{ category.url }}">{{ category.title }}</a> <!-- this is how it should look if category were a class -->
+                        <a title="{{ category }}" href="/category/{{ category }}">{{ category }}</a> <!-- this is how it should look if category were a class -->
+                    </li>{% endfor %} 
+                </ul>   
+            </div><!--{% endif %}--><!-- end category list section -->
+            <!-- ways to shop section -->
+            <div class="section"><!-- this is pretty much static... do I need anything here? -->
+                <h2>Discover</h2>
+                <ul id="ways-to-shop">
+                    <li>
+                        <a title="curated list" href="#">Curated lists</a>
                     </li>
                     <li>
-                        <a title="#" href="#">Cuisine</a>
+                        <a title="Shop nearby" href="#">Shop nearby</a>
                     </li>
                     <li>
-                        <a title="#" href="#">Culture</a>
+                        <a title="Personalized offers" href="#">Personalized offers</a>
                     </li>
                     <li>
-                        <a title="#" href="#">Education</a>
+                        <a title="Recently posted" href="#">Fresh experiences</a>
                     </li>
                     <li>
-                        <a title="#" href="#">Love</a>
+                        <a title="Shop with friends" href="#">Shop with friends</a>
                     </li>
-                    <li>
-                        <a title="#" href="#">Save the world</a>
-                    </li>
-                    <li>
-                        <a title="#" href="#">Travel</a>
-                    </li>
-                </ul>    
-            </div><!-- end category list section -->    
+                </ul>
+            </div>
+            <!--subscribe to email list section -->
+            <div class="section-email-list">
+                <h2>The daily experience</h2>
+                <p>Get our daily email of experiences and gift ideas.</p>
+                <div id="input-group">
+                    <form id="form" name="form" method="post" action="#">
+                        <input class="text" type="text" onfocus="if(this.value=='Enter your email')this.value='';" value="Enter your email" name="email">
+                        <span><input type="submit" value="Sign Up"></span>
+                    </form>
+                </div>
+            </div>    
+        </div><!-- end side bar -->
+        
+        <!-- primary content -->
+        <div id="primary">
     
         {% for item in experiences %}
         <h2><a href="{% url experience_profile item.id %}">{{ item.title }} </a> by <a href="{% url merchant_profile item.merchant.slug %}">{{ item.merchant.name }}</a></h2>
