--- a/templates/base.html
+++ b/templates/base.html
@@ -82,7 +82,7 @@
     </div>{% endblock %}<!-- end footer -->
     
 
-</div>{% endblock %}<!-- close wrapper -->
+</div><!-- close wrapper -->
 
 </body>
     
