--- a/merchants/templates/merchants/merchant_profile.html
+++ b/merchants/templates/merchants/merchant_profile.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 
-{% block header %}
+<title>{% block title %}This is {{ merchant.name }} page{% endblock %}</title>
 
-{% endblock %}
+
 
 {% block content %}
     
-    {{ merchant.name }}
+    
 
 
-{% endblock %}
+{% endblock %} 
