--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,141 @@
 <html>
 <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="{{ MEDIA_URL }}css/style.css" type="text/css" media="screen, print" />    
-    <title>{% block title %}Welcome to the Experience Project!{% endblock %}</title> 
+<meta charset="UTF-8" />
+<!--    <style type="text/css">
+div#wrapper {
+width:980px;
+margin:0px auto 0px auto;
+background-color:#CCC;
+}
+
+
+a {text-decoration: none;}
+a:link {color: blue;}
+a:visited {color: blue;} 
+a:hover {text-decoration: underline;}
+
+/*------------------------------------------------------------------------------*/
+/*          1. HEADER                                                          
+/*------------------------------------------------------------------------------*/
+header#header {
+    background-color:#f60;
+    height:100px;
+}
+
+header#header nav#login {
+    text-align:right;
+    background-color:#fefefe;
+}
+
+nav#main-nav div#main-nav-group > div {
+    display:inline-block;
+    margin:0px 60px 0px 10px;
+}
+
+nav#main-nav div#main-nav-group select {
+    padding-right: 10px;
+    margin-right: 20px;
+}
+
+input.search-input {
+    width:300px;
+    height:30px;
+    background-color:#FFF;
+    border:solid 1px #ccc;
+    font-size:18px;
+    font-weight:bold;
+    margin-right: 20px;
+}
+
+
+
+
+/*------------------------------------------------------------------------------*/
+/*          2. MAIN CONTENT                                                           
+/*------------------------------------------------------------------------------*/
+
+div#content {
+    display:table; width:100%;
+}
+
+nav#left-nav {
+    background-color:#555;
+    width:250px; height:auto;
+    float:left;
+}
+
+article#main-content {
+    background-color:#000;
+    color:#FFF;
+    float:left;
+    width:710px;
+    height:430px;
+    padding:10px;
+}
+
+article#main-content ul#ways-to-shop-bar li {
+    float: left;
+    margin: 10px;
+    padding: 10px;
+}
+
+
+.image-gallery {
+	list-style: none;
+	margin-top: 100px;
+}
+
+.image-gallery li {  
+	float: left;
+	margin: 5px;
+	padding: 5px;
+}
+
+.listing-item {
+	width: 220px;
+}
+
+#thumb-details {
+	height: 50px;
+	margin-bottom: 10px;
+	
+}
+
+article#main-content div#experience-of-the-day {
+	float: left;
+	padding: 5px;
+}
+
+footer {
+    background-color: red;
+    height:50px;
+}
+
+footer > div {
+    display:inline-block;
+    margin:0px 60px 0px 10px;
+}
+
+footer ul.footer-nav {
+    list-style: none;
+    margin-top: 10px;
+}
+
+footer ul.footer-nav li {
+    float: left;
+    margin: 5px;
+    padding: 5px;
+}
+</style>-->
+<!--<link rel="stylesheet" href="{{ MEDIA_URL }}css/style.css" type="text/css" media="screen, print" />    -->
+<title>{% block title %}Welcome to the Experience Project!{% endblock %}</title>
 </head>
 
 <body>
     
 <!-- wrap all -->    
-<div id="wrapper"><!-- DOES THE WRAPPER GOES IN BASE? -->  
+<div id="wrapper"><!-- DOES THE WRAPPER GOES IN BASE? -->
+    {% block header %}
     <div id="header"><!-- ASK JOSEPH ABOUT THE HEADER- what goes into base.html and what goes into each indvidual page? -->
         <h1 id="logo"><!-- I think this block should stay in base.html -->
             <a href="#">The Experience Project</a>
@@ -24,8 +151,9 @@
                 </li>
             </ul>
         </div>
+        
         <!-- main nav bar --><!-- I think that the main nav is going to change based on the page... and whether a user is logged in... prob. should not be in base -->
-        {% block mainnav %}
+        {% block main-nav %}
         <div id="main-nav">
             <ul id="user-nav">
                 <li class="first">
@@ -52,8 +180,9 @@
             <div id="cart">
                 <a title="Your Shopping Cart" href="#">Cart</a>
             </div>
-        </div>{% endblock %}
-    </div><!-- close header -->
+        </div>{% endblock %}<!-- close main-nav -->
+    </div>{% endblock %}<!-- close header -->
+    
 
     
     <!-- ASK JOSEPH IF IS SHOULD PUT THE TWO COLUMN DIV IN BASE?? -->
