Small fixes and testing models

--- a/xperiences/experiences/templates/experiences/index.html
+++ b/xperiences/experiences/templates/experiences/index.html
@@ -8,34 +8,34 @@
 
 
 {% block content %}
-    
+
         <!-- left column-->
         <nav id="left-nav">
             <!-- category list section -->
             <div class="section">
-                <h2>Categories</h2>                
+                <h2>Categories</h2>
                 <ul id="category-list">
-                    {% for category in categories %}  
+                    {% for category in categories %}
                     <li>
                         <a title="{{ category }}" href="/category/{{ category }}">{{ category }}</a> <!-- this is how it should look if category were a class -->
                     </li>
-                    {% endfor %} 
-                </ul>   
+                    {% endfor %}
+                </ul>
             </div>
-            
+
             <!--subscribe to email list section -->
             <div id="email-list" class="section">
-                <h2>The daily experience</h2>
-                <p>Get our daily email of experiences and gift ideas.</p>
-                <div id="input-group">
-                    <form id="form" name="form" method="post" action="#">
-                        <input class="space_common" type="text" onfocus="if(this.value=='Enter your email')this.value='';" value="Enter your email" name="email">
+                <form id="form" name="form" method="post" action="#">
+                    <h2>The daily experience</h2>
+                    <p><label for="daily_email">Get our daily email of experiences and gift ideas.</label></p>
+                    <div id="input-group">
+                        <input id="daily_email" class="space_common" type="text" onfocus="if(this.value=='Enter your email')this.value='';" value="Enter your email" name="email">
                         <input class="button" type="submit" value="Sign Up">
-                    </form>
-                </div>
-            </div><!-- close email-list -->    
+                    </div>
+                </form>
+            </div><!-- close email-list -->
         </nav><!-- close side bar -->
-        
+
         <!-- primary content -->
         <article id="main-content">
             <h1>hits: {{ hits }}</h1>
@@ -58,13 +58,13 @@
                     </li>
                 </ul>
             </div>
-            
-            <div class="grid">  
+
+            <div class="grid">
                 <ul class="image-gallery">
                 {% for item in recent_experiences %}
                     <li id="#" class="listing-item">
                         <a class="#" title="{{ experience.title }}" href="#">
-                            <img width="230" height="150" alt="{{ experience.title }}" src="/site-media/images/cheese_making.jpg">
+                            <img width="230" height="150" alt="{{ experience.title }}" src="/media/images/cheese_making.jpg">
                         </a>
                         <div id="thumb-details">
                             <p class="listing-title">
@@ -85,4 +85,4 @@
             </div>
         </article>
 
-{% endblock %}   
+{% endblock %}
